<resources>
    <string name="app_name">Maintenance Scheduler</string>
    <string name="description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!-- LOGIN STRINGS -->
    <string name="login_title">Sign In</string>
    <string name="login_label_email">Email</string>
    <string name="login_hint_email">Enter Username</string>
    <string name="login_label_password">Password</string>
    <string name="login_hint_password">Enter Password</string>
    <string name="login_msg_forgotPassword">Keep Logged In</string>
    <string name="login_link_forgotPassword">Click here</string>

    <!-- LOGOUT STRINGS -->
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>

    <string name="menu_option_logout">Log Out</string>
    <!-- TRAINER MENU STRINGS -->
    <string name="trainer_option_verify">Verify</string>
    <string name="trainer_option_delegate">Delegate</string>
    <string name="trainer_option_reports">Reports</string>

    <!-- SITE MANAGER MENU STRINGS -->
    <string name="siteManager_option_schedule">Schedule</string>
    <string name="siteManager_option_reports">Reports</string>

    <!-- FRAGMENT TITLES -->
    <string name="title_campus_selection">Select a Campus</string>
    <string name="title_room_selection">Select a Room</string>
    <string name="title_cleaningCriteria_selection">Select Cleaning Criteria</string>
    <string name="title_trainer_selection">Select a Trainer</string>
    <string name="title_date_selection">Select Date</string>
    <string name="title_signature">Signature</string>


    <!-- DESCRIPTIONS -->
    <!-- SITE MANAGER -->
        <!-- SCHEDULE -->
        <string name="description_sm_sch_campus">
            Click on a campus below
            to start scheduling a room cleaning.
        </string>
        <string name="description_sm_sch_room">
            Click a room from the list below
            to set it as the room to schedule for cleaning.
        </string>
        <string name="description_sm_sch_criteria">
            For each item, swipe left or right.
            Left to remove it from the criteria list.
            Right to add it to the criteria list.
        </string>
        <string name="description_sm_sch_trainer">
            Select a trainer from the list below.
            This trainer will be responsible for
            verifying that the room is clean.
        </string>
        <string name="description_sm_sch_date">
            Select a start date (left) and an end date (right).
            Click the submit button to set the dates for
            which you will delegate.
        </string>

        <!-- REPORTS -->
        <string name="description_sm_rpt_reports">
            Select a start date (left) and
            an end date (right).
            Click the submit button to generate the
            reports based on the dates you have entered.
        </string>

    <!-- TRAINER -->
        <!-- VERIFY -->
        <string name="description_tr_verify_room">
            Select a room from the list below.
            You will verify whether or not the
            items in this room are clean.
        </string>

        <string name="description_tr_verify_criteria">
            For each item, swipe left or right.
            Left means the item is not clean.
            Right means that the item is clean.
        </string>

        <string name="description_tr_verify_signature">
            Sign in the box provided below.
            By signing you are verifying the
            information you have provided.
        </string>

        <!-- DELEGATE -->
        <string name="description_tr_delegate_trainer">
            Select a trainer from the list below.
            The trainer you select will be responsible
            for verifying that the room is clean.
        </string>

        <string name="description_tr_delegate_room">
            Select a room from the list below.
            The trainer will verify that this room is clean.
        </string>

        <string name="description_tr_delegate_date">
            Select a start date (left) and an end date (right).
            Click the submit button to set the dates for
            which you will delegate.
        </string>

        <!-- REPORTS -->
        <string name="description_tr_rpt_reports">
            Select a start date (left) and an end date (right).
            Click the submit button to generate the reports based on
            the dates you have entered.
        </string>

    <string name="hello_blank_fragment">Temp</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <!-- DRAWER LAYOUT STRINGS -->
    <string name="drawerOpen">Open Drawer</string>
    <string name="drawerClose">Close Drawer</string>
    <string name="btn_label_submit">Submit</string>
    <string name="title_view_reports">View Reports</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_date_picker">Pick a Date</string>

    <!-- ARGUMENTS PASSED BETWEEN FRAGMENTS -->
    <!-- FOR TRAINER -->
    <string name="argument_tr_verify_selected_room">tr_verify_selected_room</string>
    <string name="argument_tr_verify_selected_criteria">tr_verify_selected_criteria</string>
    <string name="argument_tr_delegate_selected_trainer">tr_delegate_selected_trainer</string>
    <string name="argument_tr_delegate_selected_room">tr_delegate_selected_room</string>

    <!-- FOR SITE MANAGER -->
    <string name="argument_sm_schedule_selected_campus">sm_schedule_selected_campus</string>
    <string name="argument_sm_schedule_selected_room">sm_schedule_selected_room</string>
    <string name="argument_sm_schedule_selected_criteria">sm_schedule_selected_criteria</string>
    <string name="argument_sm_schedule_selected_trainer">sm_schedule_selected_trainer</string>
    <string name="review_inputs">Review Inputs</string>
    <string name="clear">Clear</string>
    <string name="revature_training_room_maintenance_scheduler">Revature Training Room Maintenance Scheduler</string>
    <string name="version_title">Version 0.1</string>

</resources>
