<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/container_padding">

    <include
        android:id="@+id/include_logo"
        layout="@layout/include_revature_logo" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_title_margin"
        android:text="@string/login_title"
        android:textColor="@color/primeContrastDark2"
        android:textSize="@dimen/login_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_logo" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_control_margin"
        android:background="@drawable/background_edit_text"
        android:hint="@string/login_hint_email"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textColor="@color/primeContrast"
        android:textColorHint="@color/primeContrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_control_margin"
        android:background="@drawable/background_edit_text"
        android:hint="@string/login_hint_password"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textColor="@color/primeContrast"
        android:textColorHint="@color/primeContrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

    <TextView
        android:id="@+id/tv_msg_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_control_margin"
        android:background="@drawable/link_bottom_border"
        android:text="@string/login_msg_forgotPassword"
        android:textColor="@color/link_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_control_margin"
        android:onClick="login"
        android:text="trainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login2"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_control_margin"
        android:onClick="login"
        android:text="site"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>